--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <h1>Here are some of my projects</h1>
         <ul>
             <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
-            <li><a href="2017/Fake-University">Fake University</a></li>
+            <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
+            <li><a href="2017/Cleaning-Business"></a>Floral Breeze Prj</li>
         </ul>
     </body>
 </html>
