--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
             <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
-            <li><a href="2017/Cleaning-Business"></a>Floral Breeze Prj</li>
+            <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
         </ul>
     </body>
 </html>
