--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
             <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
             <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
+            <li><a href="2018/DryOar/">Dry Oar Prj</a></li>
         </ul>
     </body>
 </html>
