--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
         
     </head>
     <body>
-        <h1>Here are some of my projects</h1>
+        <h1>Some Projects</h1>
         <ul>
             <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
             <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
             <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
             <li><a href="2018/DryOar">Dry Oar Prj</a></li>
+        </ul>
+        <h1>Some Activities</h1>
+        <ul>
+            <li><a href="2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
+            <li><a href="2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity</a></li>
+            <li><a href="2018/Misc-Smaller-Projects/cardFront-flex">Card Front - Flex</a></li>
+            <li><a href="2018/Misc-Smaller-Projects/cardFront">Card Front</a></li>
+            <li><a href="2018/Misc-Smaller-Projects/curtainActivity">Curtain Activity</a></li>
+            <li><a href="2018/Misc-Smaller-Projects/magazineActivity/magazine-index.html">Magazine Activity</a></li>
+            <li><a href="2018/Misc-Smaller-Projects/svg-activity">SVG Activity</a></li>
         </ul>
     </body>
 </html>
