--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
             <li><a href="2018/DryOar">Dry Oar Prj</a></li>
         </ul>
-        <h1>Some Activities</h1>
+        <h1>Some Smaller Activities</h1>
         <ul>
             <li><a href="2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
             <li><a href="2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity</a></li>
