--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
             <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
             <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
             <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
-            <li><a href="2018/DryOar">Dry Oar Prj</a></li>
+            <li><a href="2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
         </ul>
         <h1>Some Smaller Activities</h1>
         <ul>
             <li><a href="2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
-            <li><a href="2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity</a></li>
+            <li><a href="2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity (Walk-Through Activity)</a></li>
             <li><a href="2018/Misc-Smaller-Projects/cardFront-flex">Card Front - Flex</a></li>
             <li><a href="2018/Misc-Smaller-Projects/cardFront">Card Front</a></li>
             <li><a href="2018/Misc-Smaller-Projects/curtainActivity">Curtain Activity</a></li>
