--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         
     </head>
     <body>
-        <h1>Some Projects</h1>
+        <h1>Projects</h1>
         <ul>
             <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
             <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
             <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
             <li><a href="2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
         </ul>
-        <h1>Some Smaller Activities</h1>
+        <h1>Smaller Activities</h1>
         <ul>
             <li><a href="2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
             <li><a href="2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity (Walk-Through Activity)</a></li>
