--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Projects</h1>
         <ul>
+            <li><a href="Personal-Page/">Personal Page (Under Construction)</a></li>
             <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
             <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
             <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
