--- a/Personal-Page/index.html
+++ b/Personal-Page/index.html
@@ -25,6 +25,11 @@
         <main>
             <section>
                 <h1>About Me</h1>
+                <p>Hey there! My name is Arthur Figueiredo and I am a Web Design & Development major at Brigham Youn University - Idaho.
+                I'm 20 years old and I'm from Brasilia, Brazil. It's a tiny little rectangule in the middle of Brazil's map!
+                As you may have noticed from the picture, I am married to the most beautiful woman. We met at BYU-I in an English class
+                and we've been married for almost a year now.
+                </p>
             </section>
         </main>
         <footer>
