--- a/Personal-Page/index.html
+++ b/Personal-Page/index.html
@@ -24,6 +24,26 @@
         </header>
         <main>
             <section>
+                <h1>Skills</h1>
+                <ul>
+                    <div>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>Sass/SCSS</li>
+                        <li>JavaScript></li>
+                        <li>PHP</li>
+                        <li>MySQL/Oracle</li>
+                    </div>
+                    <div>
+                        <li>C++</li>
+                        <li>Microsoft Office</li>
+                        <li>Linux/MacOS/Windows</li>
+                        <li>Proactive/Hardworker</li>
+                        <li>Abiity to learn new skills quickly</li>
+                    </div>
+                </ul>
+            </section>
+            <section>
                 <h1>About Me</h1>
                 <p>Hey there! My name is Arthur Figueiredo and I am a Web Design & Development major at Brigham Youn University - Idaho.
                 I'm 20 years old and I'm from Brasilia, Brazil. It's a tiny little rectangule in the middle of Brazil's map!
