--- a/Personal-Page/index.html
+++ b/Personal-Page/index.html
@@ -23,14 +23,22 @@
             </nav>
         </header>
         <main>
-            <section>
+            <section class="about-me">
+                <h1>About Me</h1>
+                <p>Hey there! My name is Arthur Figueiredo and I am a Web Design & Development major at Brigham Youn University - Idaho.
+                I'm 20 years old and I'm from Brasilia, Brazil. It's a tiny little rectangule in the middle of Brazil's map!
+                As you may have noticed from the picture, I am married to the most beautiful woman. We met at BYU-I in an English class
+                and we've been married for almost a year now.
+                </p>
+            </section>
+            <section class="skills">
                 <h1>Skills</h1>
                 <ul>
                     <div>
                         <li>HTML5</li>
                         <li>CSS3</li>
                         <li>Sass/SCSS</li>
-                        <li>JavaScript></li>
+                        <li>JavaScript</li>
                         <li>PHP</li>
                         <li>MySQL/Oracle</li>
                     </div>
@@ -43,13 +51,26 @@
                     </div>
                 </ul>
             </section>
-            <section>
-                <h1>About Me</h1>
-                <p>Hey there! My name is Arthur Figueiredo and I am a Web Design & Development major at Brigham Youn University - Idaho.
-                I'm 20 years old and I'm from Brasilia, Brazil. It's a tiny little rectangule in the middle of Brazil's map!
-                As you may have noticed from the picture, I am married to the most beautiful woman. We met at BYU-I in an English class
-                and we've been married for almost a year now.
-                </p>
+            <section class="work">
+                <h1>Some of My Work</h1>
+                <h3>Projects</h3>
+                <ul>
+                    <li><a href="Personal-Page/">Personal Page (Under Construction)</a></li>
+                    <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
+                    <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
+                    <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
+                    <li><a href="2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
+                </ul>
+                <h3>Smaller Activities</h3>
+                <ul>
+                    <li><a href="2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
+                    <li><a href="2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity (Walk-Through Activity)</a></li>
+                    <li><a href="2018/Misc-Smaller-Projects/cardFront-flex">Card Front - Flex</a></li>
+                    <li><a href="2018/Misc-Smaller-Projects/cardFront">Card Front</a></li>
+                    <li><a href="2018/Misc-Smaller-Projects/curtainActivity">Curtain Activity</a></li>
+                    <li><a href="2018/Misc-Smaller-Projects/magazineActivity/magazine-index.html">Magazine Activity</a></li>
+                    <li><a href="2018/Misc-Smaller-Projects/svg-activity">SVG Activity</a></li>
+                </ul>
             </section>
         </main>
         <footer>
