--- a/Personal-Page/index.html
+++ b/Personal-Page/index.html
@@ -55,21 +55,20 @@
                 <h1>Some of My Work</h1>
                 <h3>Projects</h3>
                 <ul>
-                    <li><a href="Personal-Page/">Personal Page (Under Construction)</a></li>
-                    <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
+                    <li><a href="../2018/Zen-Garden">CSS Zen Garden</a></li>
                     <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
-                    <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
-                    <li><a href="2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
+                    <li><a href="../2017/Cleaning-Business">Floral Breeze Prj</a></li>
+                    <li><a href="../2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
                 </ul>
                 <h3>Smaller Activities</h3>
                 <ul>
-                    <li><a href="2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
-                    <li><a href="2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity (Walk-Through Activity)</a></li>
-                    <li><a href="2018/Misc-Smaller-Projects/cardFront-flex">Card Front - Flex</a></li>
-                    <li><a href="2018/Misc-Smaller-Projects/cardFront">Card Front</a></li>
-                    <li><a href="2018/Misc-Smaller-Projects/curtainActivity">Curtain Activity</a></li>
-                    <li><a href="2018/Misc-Smaller-Projects/magazineActivity/magazine-index.html">Magazine Activity</a></li>
-                    <li><a href="2018/Misc-Smaller-Projects/svg-activity">SVG Activity</a></li>
+                    <li><a href="../2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
+                    <li><a href="../2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity (Walk-Through Activity)</a></li>
+                    <li><a href="../2018/Misc-Smaller-Projects/cardFront-flex">Card Front - Flex</a></li>
+                    <li><a href="../2018/Misc-Smaller-Projects/cardFront">Card Front</a></li>
+                    <li><a href="../2018/Misc-Smaller-Projects/curtainActivity">Curtain Activity</a></li>
+                    <li><a href="../2018/Misc-Smaller-Projects/magazineActivity/magazine-index.html">Magazine Activity</a></li>
+                    <li><a href="../2018/Misc-Smaller-Projects/svg-activity">SVG Activity</a></li>
                 </ul>
             </section>
         </main>
