--- a/index.html
+++ b/index.html
@@ -1,25 +1,104 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        
+        <meta charset="utf-8">
+        <link rel="stylesheet" media="screen" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Arthur Figueiredo">
+        <meta name="description" content="A personal page for presentation of some of my work.">
+        <title>Arthur Fig | Home Page</title>
     </head>
     <body>
-        <h1>Projects</h1>
-        <ul>
-            <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
-            <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
-            <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
-            <li><a href="2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
-        </ul>
-        <h1>Smaller Activities</h1>
-        <ul>
-            <li><a href="2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
-            <li><a href="2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity (Walk-Through Activity)</a></li>
-            <li><a href="2018/Misc-Smaller-Projects/cardFront-flex">Card Front - Flex</a></li>
-            <li><a href="2018/Misc-Smaller-Projects/cardFront">Card Front</a></li>
-            <li><a href="2018/Misc-Smaller-Projects/curtainActivity">Curtain Activity</a></li>
-            <li><a href="2018/Misc-Smaller-Projects/magazineActivity/magazine-index.html">Magazine Activity</a></li>
-            <li><a href="2018/Misc-Smaller-Projects/svg-activity">SVG Activity</a></li>
-        </ul>
+        <header>
+            <div>
+                <img src="assets/squareOne.jpg" alt="Picture of Me">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#work">Work Done</a></li>
+                    <li><a href="#thirdSection">References</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="firstSection">
+                <div id="about-me">
+                    <h1>About Me</h1>
+                    <p>Hey there! My name is Arthur Figueiredo and I am a Web Design & Development major at Brigham Youn University - Idaho.
+                    I'm expected to graduate on April of 2021, but I'm trying to get ahead and graduate on December of 2020. My Major GPA 
+                    is currently 3.51 and my overall GPA is 3.1. 
+                    I'm 20 years old and I'm from Brasilia, Brazil. It's a tiny little rectangule in the middle of Brazil's map!
+                    As you may have noticed from the picture, I am married to the most beautiful woman. We've been married for almost a year now,
+                    and we're excited for whatever life has planned for us.
+                    </p>
+                </div>
+                <div id="skills">
+                    <h1>Skills</h1>
+                        <ul>
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>Sass/SCSS</li>
+                            <li>JavaScript</li>
+                            <li>PHP</li>
+                            <li>MySQL/Oracle</li>
+                            <li>Fluent in Portuguese and English</li>
+                            <li>C++</li>
+                            <li>Microsoft Office</li>
+                            <li>Linux/MacOS/Windows</li>
+                            <li>Proactive/Hardworker</li>
+                            <li>Abiity to learn new skills quickly</li>
+                        </ul>
+                </div>
+            </section>
+            <section id="work">
+                <div id="biggerPrj">
+                    <h1>Some of My Work</h1>
+                    <h3>Projects</h3>
+                    <ul>
+                        <li><a href="../2018/Zen-Garden">CSS Zen Garden</a></li>
+                        <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
+                        <li><a href="../2017/Cleaning-Business">Floral Breeze Prj</a></li>
+                        <li><a href="../2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
+                    </ul>
+                </div>
+                <div id="smallerPrj">
+                    <h3>Smaller Activities</h3>
+                    <ul>
+                        <li><a href="../2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
+                        <li><a href="../2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity (Walk-Through Activity)</a></li>
+                        <li><a href="../2018/Misc-Smaller-Projects/cardFront-flex">Card Front - Flex</a></li>
+                        <li><a href="../2018/Misc-Smaller-Projects/cardFront">Card Front</a></li>
+                        <li><a href="../2018/Misc-Smaller-Projects/curtainActivity">Curtain Activity</a></li>
+                        <li><a href="../2018/Misc-Smaller-Projects/magazineActivity/magazine-index.html">Magazine Activity</a></li>
+                        <li><a href="../2018/Misc-Smaller-Projects/svg-activity">SVG Activity</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section id="thirdSection">
+                <h1>Work Experience</h1>
+                <h3>WDD 100 Teaching Assistant | October 2018 - Present</h3>
+                <p>In this position I am responsible for grading students homework assignments, which includes looking over other peoples 
+                code, understanding it and providing feedback. Occasionally, when the professor can't make it to the class, I am responsible 
+                for conducting class. In addition to those, I am also responsible for assisting the professor in class with questions and concerns 
+                from the students.
+                </p>
+                <h3>BYU-I Night Patrol & Lock-Up | June 2018 - Present</h3>
+                <p>In this position I am responsible for patrolling BYU-I campus in the night shift and make sure everything is in order. In addition 
+                to that, I am also responsible for locking up classrooms and the building itself when it's time. This position demonstrates my 
+                ability to take on big responsibilities and show my work ethics.
+                </p>
+                <h1>References</h1>
+                <ul>
+                    <li>Officer Scott Sauer | BYU-I Campus Officer</li>
+                    <li>Brother Randy Somsen | BYU-I CIT Department Faculty</li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
+
