--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
                     <h1>Some of My Work</h1>
                     <h3>Projects</h3>
                     <ul>
-                        <li><a href="../2018/Zen-Garden">CSS Zen Garden</a></li>
+                        <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
                         <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
-                        <li><a href="../2017/Cleaning-Business">Floral Breeze Prj</a></li>
-                        <li><a href="../2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
+                        <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
+                        <li><a href="2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
                     </ul>
                 </div>
                 <div id="smallerPrj">
                     <h3>Smaller Activities</h3>
                     <ul>
-                        <li><a href="../2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
-                        <li><a href="../2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity (Walk-Through Activity)</a></li>
-                        <li><a href="../2018/Misc-Smaller-Projects/cardFront-flex">Card Front - Flex</a></li>
-                        <li><a href="../2018/Misc-Smaller-Projects/cardFront">Card Front</a></li>
-                        <li><a href="../2018/Misc-Smaller-Projects/curtainActivity">Curtain Activity</a></li>
-                        <li><a href="../2018/Misc-Smaller-Projects/magazineActivity/magazine-index.html">Magazine Activity</a></li>
-                        <li><a href="../2018/Misc-Smaller-Projects/svg-activity">SVG Activity</a></li>
+                        <li><a href="2018/Misc-Smaller-Projects/HamburgerActivity">Hamburguer Menu Activity</a></li>
+                        <li><a href="2018/Misc-Smaller-Projects/bootstrapActivity">Bootstrap Activity (Walk-Through Activity)</a></li>
+                        <li><a href="2018/Misc-Smaller-Projects/cardFront-flex">Card Front - Flex</a></li>
+                        <li><a href="2018/Misc-Smaller-Projects/cardFront">Card Front</a></li>
+                        <li><a href="2018/Misc-Smaller-Projects/curtainActivity">Curtain Activity</a></li>
+                        <li><a href="2018/Misc-Smaller-Projects/magazineActivity/magazine-index.html">Magazine Activity</a></li>
+                        <li><a href="2018/Misc-Smaller-Projects/svg-activity">SVG Activity</a></li>
                     </ul>
                 </div>
             </section>
