--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h1>Work Experience</h1>
                 <h3>WDD 100 Teaching Assistant | October 2018 - Present</h3>
                 <p>In this position I am responsible for grading students homework assignments, which includes looking over other peoples 
-                code, understanding it and providing feedback. Occasionally, when the professor can't make it to the class, I am responsible 
+                code, understanding it and providing feedback. Occasionally, when the professor can't make it to class, I am responsible 
                 for conducting class. In addition to those, I am also responsible for assisting the professor in class with questions and concerns 
                 from the students.
                 </p>
