--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             </section>
         </main>
         <footer>
-
+            Contact Information:
+            <a href="mailto:fig16009@byui.edu" target="_blank">E-mail</a>
         </footer>
     </body>
 </html>
