--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <li><a href="2018/Zen-Garden">CSS Zen Garden</a></li>
                         <!--<li><a href="2017/Fake-University">Fake University</a></li>-->
                         <li><a href="2017/Cleaning-Business">Floral Breeze Prj</a></li>
-                        <li><a href="2018/DryOar">Dry Oar Prj (The home page was a Walk-Through activity, but the sub-pages are of my own.)</a></li>
+                        <li><a href="2018/DryOar">Dry Oar Project</a></li>
                     </ul>
                 </div>
                 <div id="smallerPrj">
@@ -97,8 +97,11 @@
             </section>
         </main>
         <footer>
-            Contact Information:
-            <a href="mailto:fig16009@byui.edu" target="_blank">E-mail</a>
+            <ul>
+                <li>Contact Information:</li>
+                <li><a href="mailto:fig16009@byui.edu">fig16009@byui.edu</a></li>
+                <li>+1 (385) 482-9732</li>
+            </ul>
         </footer>
     </body>
 </html>
