--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     and we're excited for whatever life has planned for us.
                     </p>
                 </div>
-                <div id="skills">
+                <div id="skills" data-aos="flip-left">
                     <h1>Skills</h1>
                         <ul>
                             <li>HTML5</li>
