--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </ul>
             </section>
         </main>
-        <footer  data-aos="flip-down">
+        <footer>
             <ul>
                 <li>Contact Information:</li>
                 <li><a href="mailto:fig16009@byui.edu">fig16009@byui.edu</a></li>
