--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </ul>
                 </div>
             </section>
-            <section id="thirdSection" data-aos="zoom-in" data-aos-duration="4000">
+            <section id="thirdSection" data-aos="zoom-in">
                 <h1>Work Experience</h1>
                 <h3>WDD 100 Teaching Assistant | October 2018 - Present</h3>
                 <p>In this position I am responsible for grading students homework assignments, which includes looking over other peoples 
