--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p>Hey there! My name is Arthur Figueiredo and I am a Web Design & Development major at Brigham Youn University - Idaho.
                     I'm expected to graduate on April of 2021, but I'm trying to get ahead and graduate on December of 2020. My Major GPA 
                     is currently 3.51 and my overall GPA is 3.1. 
-                    I'm 20 years old and I'm from Brasilia, Brazil. It's a tiny little rectangule in the middle of Brazil's map!
+                    I'm 20 years old and I'm from Brasilia, Brazil. It's a tiny little rectangle in the middle of Brazil's map.
                     As you may have noticed from the picture, I am married to the most beautiful woman. We've been married for almost a year now,
                     and we're excited for whatever life has planned for us.
                     </p>
