--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <main>
             <section id="firstSection">
-                <div id="about-me">
+                <div id="about-me" data-aos="fade-up">
                     <h1>About Me</h1>
                     <p>Hey there! My name is Arthur Figueiredo and I am a Web Design & Development major at Brigham Youn University - Idaho.
                     I'm expected to graduate on April of 2021, but I'm trying to get ahead and graduate on December of 2020. My Major GPA 
@@ -37,7 +37,7 @@
                     and we're excited for whatever life has planned for us.
                     </p>
                 </div>
-                <div id="skills">
+                <div id="skills" data-aos="fade-right">
                     <h1>Skills</h1>
                         <ul>
                             <li>HTML5</li>
