--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     and we're excited for whatever life has planned for us.
                     </p>
                 </div>
-                <div id="skills" data-aos="fade-right">
+                <div id="skills" data-aos="fade-down">
                     <h1>Skills</h1>
                         <ul>
                             <li>HTML5</li>
