--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </div>
             <nav>
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#about-me" onclick="aboutme()">About Me</a></li>
                     <li><a href="#skills" onclick="skills()">Skills</a></li>
                     <li><a href="#work" onclick="workDone()">Work Done</a></li>
